adding danielcrawl@gmail.com as email recipient

--- a/.travis.yml
+++ b/.travis.yml
@@ -43,5 +43,6 @@ notifications:
  email:
    recipients:
      - jones@nceas.ucsb.edu
+     - danielcrawl@gmail.com
    on_success: always # default: change
    on_failure: always # default: always
