--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ matrix:
       jdk: oraclejdk8
     - env: JDK='Oracle JDK 10'
       install: . ./install-jdk.sh -F 10 -L BCL
+    - env: JDK='Oracle OpenJDK 11'
+      jdk: openjdk11
 
 sudo: required
 
