adding Michal Owsiak to receipients

--- a/.travis.yml
+++ b/.travis.yml
@@ -46,5 +46,6 @@ notifications:
    recipients:
      - jones@nceas.ucsb.edu
      - danielcrawl@gmail.com
+     - michal.owsiak@man.poznan.pl
    on_success: always # default: change
    on_failure: always # default: always
