--- a/.travis.yml
+++ b/.travis.yml
@@ -7,15 +7,12 @@ matrix:
   include:
     - env: JDK='Oracle JDK 8'
       jdk: oraclejdk8
-    - env: JDK='Oracle JDK 10'
-      install: . ./install-jdk.sh -F 10 -L BCL
+    - env: JDK='Oracle OpenJDK 10'
+      jdk: openjdk10
     - env: JDK='Oracle OpenJDK 11'
       jdk: openjdk11
 
 sudo: required
-
-before_install:
-  - wget https://github.com/sormuras/bach/raw/master/install-jdk.sh
 
 before_script:
   - sudo apt-get update
