--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ matrix:
 
 sudo: required
 
+install: ant deps
+
 before_script:
   - sudo apt-get update
   # Need to install 32-bit libraries so that we can run windres while
