--- a/.travis.yml
+++ b/.travis.yml
@@ -26,10 +26,12 @@ matrix:
         - ls ${JAVA_HOME}/conf/security
         - ls -l ${JAVA_HOME}/conf/security/java.security
         - cat ${JAVA_HOME}/conf/security/java.security
-        - sed 's/jdk.tls.disabledAlgorithms=/jdk.tls.disabledAlgorithms=TLSv1.3, /' ${JAVA_HOME}/conf/security/java.security > ${JAVA_HOME}/conf/security/java.security.new
-        - diff ${JAVA_HOME}/conf/security/java.security  ${JAVA_HOME}/conf/security/java.security.new       
+        - sed 's/jdk.tls.disabledAlgorithms=/jdk.tls.disabledAlgorithms=TLSv1.3, /' ${JAVA_HOME}/conf/security/java.security > /tmp/java.security.new
+        - diff /tmp/java.security.new ${JAVA_HOME}/conf/security/java.security
+        - sudo mv /tmp/java.security.new ${JAVA_HOME}/conf/security/java.security
         - mv ${JAVA_HOME}/conf/security/java.security.new ${JAVA_HOME}/conf/security/java.security        
         - ls -l ${JAVA_HOME}/conf/security/java.security
+        - grep jdk.tls.disabledAlgorithms= ${JAVA_HOME}/conf/security/java.security
     - env: JDK='Oracle OpenJDK 12'
       jdk: openjdk12
 
