--- a/.travis.yml
+++ b/.travis.yml
@@ -42,6 +42,8 @@ before_script:
   - sudo apt-get update
   # Need to install 32-bit libraries so that we can run windres while
   # building Windows installers.
+  # Under focal, add the universe repo so that lib32ncurses5 can be found.
+  - sudo add-apt-repository universe
   - sudo apt-get install lib32z1 lib32ncurses5 ant
   # Fix a cert problem, see https://stackoverflow.com/questions/69387175/git-for-windows-ssl-certificate-problem-certificate-has-expired
   - sudo ls -l /usr/share/ca-certificates/mozilla/DST_Root_CA_X3.crt
