--- a/.travis.yml
+++ b/.travis.yml
@@ -45,9 +45,10 @@ before_script:
   - sudo add-apt-repository universe
   - sudo apt-get install lib32z1 lib32ncurses6 ant
   # Fix a cert problem, see https://stackoverflow.com/questions/69387175/git-for-windows-ssl-certificate-problem-certificate-has-expired
-  - sudo ls -l /usr/share/ca-certificates/mozilla/DST_Root_CA_X3.crt
-  - sudo rm -f /usr/share/ca-certificates/mozilla/DST_Root_CA_X3.crt
-  - sudo update-ca-certificates  
+  # Ubuntu 20.x focal: this file does not exist
+  - sudo ls -l /usr/share/ca-certificates/mozilla/DST_Root_CA_X3.crt || true
+  - sudo rm -f /usr/share/ca-certificates/mozilla/DST_Root_CA_X3.crt || true
+  - sudo update-ca-certificates || true  
 script:
   # Echo status messages so that Travis knows we are alive.
   # If you need to get status about available memory, insert "free -m; top -b -n 1 -o %MEM | head -20 " inside the loop.
