--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-dist: bionic
+dist: focal
 
 env:
   global:
@@ -43,8 +43,8 @@ before_script:
   # Need to install 32-bit libraries so that we can run windres while
   # building Windows installers.
   - sudo add-apt-repository universe
-  # Under Ubuntu 20.x change lib32ncurses5 to 6
-  - sudo apt-get install lib32z1 lib32ncurses5 ant
+  # Under Ubuntu 20.x (focal) change lib32ncurses5 to 6
+  - sudo apt-get install lib32z1 lib32ncurses6 ant
   # Fix a cert problem, see https://stackoverflow.com/questions/69387175/git-for-windows-ssl-certificate-problem-certificate-has-expired
   # Ubuntu 20.x focal: this file does not exist
   - sudo ls -l /usr/share/ca-certificates/mozilla/DST_Root_CA_X3.crt || true
